--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
         "start": "yarn server-docker",
-        "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
+        "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --detach"
     },
     "dependencies": {
         "@alanmorel/vida": "^0.0.27",
@@ -31,57 +31,60 @@
         "compression": "^1.7.4",
         "connect-session-sequelize": "^7.1.1",
         "cookie-parser": "^1.4.5",
-        "core-js": "^3.9.1",
+        "core-js": "^3.16.2",
         "cors": "^2.8.5",
-        "dotenv": "^8.2.0",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "express-handlebars": "^5.2.1",
-        "express-session": "^1.17.1",
-        "helmet": "^4.4.1",
-        "joi": "^17.4.0",
+        "express-handlebars": "^5.3.3",
+        "express-session": "^1.17.2",
+        "helmet": "^4.6.0",
+        "joi": "^17.4.2",
         "joi-password-complexity": "^5.1.0",
-        "mysql2": "^2.2.5",
+        "morgan": "^1.10.0",
+        "mysql2": "^2.3.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "sequelize": "^6.5.0",
-        "vue": "^3.0.0-rc.13",
+        "sequelize": "^6.6.5",
+        "vue": "^3.2.0-beta.8",
         "vue-router": "^4.0.0-rc.6",
         "vuex": "^4.0.0-rc.2"
     },
     "devDependencies": {
-        "@types/bcrypt": "^3.0.0",
-        "@types/compression": "^1.7.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/compression": "^1.7.1",
         "@types/cookie-parser": "^1.4.2",
-        "@types/cors": "^2.8.10",
-        "@types/express": "^4.17.11",
-        "@types/express-handlebars": "^3.1.0",
-        "@types/express-session": "^1.17.3",
-        "@types/node": "^14.14.35",
-        "@types/passport": "^1.0.6",
-        "@types/passport-local": "^1.0.33",
-        "@types/sequelize": "^4.28.9",
-        "@types/validator": "^13.1.3",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
-        "@typescript-eslint/parser": "^4.19.0",
-        "@vue/cli-plugin-babel": "^5.0.0-alpha.8",
-        "@vue/cli-plugin-eslint": "^5.0.0-alpha.8",
-        "@vue/cli-plugin-router": "^5.0.0-alpha.8",
-        "@vue/cli-plugin-unit-jest": "^5.0.0-alpha.8",
-        "@vue/cli-plugin-vuex": "^5.0.0-alpha.8",
-        "@vue/cli-service": "^5.0.0-alpha.8",
-        "@vue/compiler-sfc": "^3.0.7",
-        "@vue/test-utils": "^1.1.3",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/express-handlebars": "^5.3.1",
+        "@types/express-session": "^1.17.4",
+        "@types/helmet": "^4.0.0",
+        "@types/morgan": "1.9.3",
+        "@types/node": "^16.6.1",
+        "@types/passport": "^1.0.7",
+        "@types/passport-local": "^1.0.34",
+        "@types/sequelize": "^4.28.10",
+        "@types/validator": "^13.6.3",
+        "@typescript-eslint/eslint-plugin": "^4.29.2",
+        "@typescript-eslint/parser": "^4.29.2",
+        "@vue/cli-plugin-babel": "^5.0.0-beta.3",
+        "@vue/cli-plugin-eslint": "^5.0.0-beta.3",
+        "@vue/cli-plugin-router": "^5.0.0-beta.3",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.3",
+        "@vue/cli-plugin-vuex": "^5.0.0-beta.3",
+        "@vue/cli-service": "^5.0.0-beta.3",
+        "@vue/compiler-sfc": "^3.2.4",
+        "@vue/test-utils": "^1.2.2",
         "babel-eslint": "^10.1.0",
-        "eslint": "^7.22.0",
-        "eslint-plugin-vue": "^7.8.0",
-        "jest": "^26.6.3",
-        "jest-puppeteer": "^4.4.0",
-        "nodemon": "^2.0.7",
-        "puppeteer": "^8.0.0",
+        "eslint": "^7.32.0",
+        "eslint-plugin-vue": "^7.16.0",
+        "jest": "^27.0.6",
+        "jest-puppeteer": "^5.0.4",
+        "nodemon": "^2.0.12",
+        "puppeteer": "^10.2.0",
+        "sass": "^1.38.0",
+        "sass-loader": "^12.1.0",
         "sequelize-cli": "^6.2.0",
-        "sass": "^1.32.8",
-        "sass-loader": "^11.0.1",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.3"
+        "ts-node": "^10.2.0",
+        "typescript": "^4.3.5"
     }
 }
