--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "scripts": {
         "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
         "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
-        "build-server": "tsc --project ./",
+        "build-server": "tsc --project ./server/tsconfig.json",
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
-        "server": "nodemon server/core/server.ts --watch server",
+        "server": "nodemon --config ./nodemon.config.json server/core/Server.ts --watch server",
         "server-docker": "nodemon --legacy-watch server/core/server.ts --watch server",
         "server-static": "pm2-runtime dist/server/core/server.js",
         "test-app": "jest --config jest-app.config.js || exit 0",
@@ -28,7 +28,6 @@
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
-        "compression": "^1.7.4",
         "connect-session-sequelize": "^7.1.1",
         "cookie-parser": "^1.4.5",
         "core-js": "^3.16.2",
@@ -85,6 +84,8 @@
         "sass-loader": "^12.1.0",
         "sequelize-cli": "^6.2.0",
         "ts-node": "^10.2.0",
+        "tsc-alias": "^1.3.8",
+        "tsconfig-paths": "^3.10.1",
         "typescript": "^4.3.5"
     }
 }
