--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon --config ./nodemon.config.json server/core/Server.ts --watch server",
-        "server-docker": "nodemon --legacy-watch server/core/server.ts --watch server",
-        "server-static": "pm2-runtime dist/server/core/server.js --env production --instances max",
+        "server-docker": "nodemon --legacy-watch server/core/Srver.ts --watch server",
+        "server-static": "pm2-runtime dist/server/core/Server.js --env production --instances max",
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
