--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "scripts": {
         "build-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
         "build-prod": "vue-cli-service build --mode production --dest dist/production --target app --modern",
-        "build-server": "tsc --project ./server/tsconfig.json",
+        "build-server": "tsc --project ./server/tsconfig.json && tscpaths -p ./server/tsconfig.json -s ./server -o ./dist/server",
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
-        "server": "nodemon --config ./nodemon.config.json server/core/Server.ts --watch server",
+        "server": "nodemon --config ./nodemon.config.json ./server/core/Server.ts --watch server",
         "server-docker": "nodemon --legacy-watch server/core/Server.ts --watch server",
-        "server-static": "pm2-runtime dist/server/core/Server.js --env production --instances max",
+        "server-static": "pm2-runtime start ./dist/server/core/Server.js --env production --instances max",
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
@@ -87,6 +87,7 @@
         "ts-node": "^10.2.0",
         "tsc-alias": "^1.3.8",
         "tsconfig-paths": "^3.10.1",
+        "tscpaths": "^0.0.9",
         "typescript": "^4.3.5"
     }
 }
