--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon --config ./nodemon.config.json ./server/core/Server.ts --watch server",
-        "server-docker": "nodemon --legacy-watch server/core/Server.ts --watch server",
-        "server-static": "pm2-runtime start ./dist/server/core/Server.js --env production --instances max",
+        "server-static": "node ./dist/server/core/Server.js",
+        "server-runtime": "pm2-runtime start ./dist/server/core/Server.js --env production --instances max",
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
-        "start": "yarn server-static",
+        "start": "yarn server-runtime",
         "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --detach"
     },
     "dependencies": {
