--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,21 +2,23 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "commonjs",
+        "rootDir": "./",
         "outDir": "../dist/server",
         "strict": true,
-        "importHelpers": true,
         "moduleResolution": "node",
+        "importHelpers": true,
         "experimentalDecorators": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
+        "forceConsistentCasingInFileNames": true,
         "removeComments": true,
         "typeRoots": [
             "node_modules/@types"
         ],
-        "sourceMap": true,
-        "baseUrl": ".",
+        "sourceMap": false,
+        "baseUrl": "./",
         "paths": {
             "@/*": [
                 "./*"
