--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "test-app": "jest --config jest-app.config.js || exit 0",
         "test-server": "jest --config jest-server.config.js || exit 0",
         "build-all": "yarn build-prod && yarn build-server",
-        "docker-up-prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --detach"
+        "docker-up-prod": "docker compose -f docker compose.yml -f docker compose.prod.yml up --detach"
     },
     "dependencies": {
         "@alanmorel/vida": "^0.0.27",
