--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "watch-dev": "vue-cli-service build --mode development --dest dist/development --target app --watch",
         "build-development": "vue-cli-service build --mode development --dest dist/development --target app",
         "build-production": "vue-cli-service build --mode production --dest dist/production --target app --modern",
-        "build-server": "tsc --project ./server/tsconfig.json && tscpaths -p ./server/tsconfig.json -s ./server -o ./dist/server",
+        "build-server": "tsc --project ./server/tsconfig.json && tsc-alias -p ./server/tsconfig.json",
         "lint-app": "eslint ./app --config ./app/.eslintrc.js --ext .vue --fix",
         "lint-server": "eslint ./server --config ./server/.eslintrc.js --ext .ts --fix",
         "server": "nodemon --config ./nodemon.config.json ./server/core/Server.ts --watch server",
@@ -55,7 +55,7 @@
         "@types/express-session": "^1.17.4",
         "@types/helmet": "^4.0.0",
         "@types/morgan": "1.9.3",
-        "@types/node": "^16.7.13",
+        "@types/node": "^16.9.1",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
@@ -84,7 +84,6 @@
         "ts-node": "^10.2.1",
         "tsc-alias": "^1.3.9",
         "tsconfig-paths": "^3.11.0",
-        "tscpaths": "^0.0.9",
         "typescript": "^4.4.2"
     }
 }
