--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
         runs-on: [ubuntu-latest]
         steps:
             - uses: actions/checkout@v2
-            - name: Deploy latest
+            - name: Deploy latest ${{ github.event.repository.name }}
               uses: appleboy/ssh-action@master
               with:
                   host: ${{ secrets.SERVER_IP }}
