--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     },
     "dependencies": {
         "@alanmorel/vida": "^0.0.27",
-        "axios": "^0.21.4",
+        "axios": "^0.22.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "connect-session-sequelize": "^7.1.2",
         "cookie-parser": "^1.4.5",
-        "core-js": "^3.17.2",
+        "core-js": "^3.18.2",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "express-handlebars": "^5.3.3",
+        "express-handlebars": "^5.3.4",
         "express-session": "^1.17.2",
         "helmet": "^4.6.0",
         "joi": "^17.4.2",
         "joi-password-complexity": "^5.1.0",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.0",
-        "passport": "^0.4.1",
+        "passport": "^0.5.0",
         "passport-local": "^1.0.0",
         "sequelize": "^6.6.5",
         "vue": "^3.2.0-beta.8",
@@ -55,35 +55,39 @@
         "@types/express-session": "^1.17.4",
         "@types/helmet": "^4.0.0",
         "@types/morgan": "1.9.3",
-        "@types/node": "^16.9.1",
+        "@types/node": "^16.10.3",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
         "@types/validator": "^13.6.3",
-        "@typescript-eslint/eslint-plugin": "^4.31.0",
-        "@typescript-eslint/parser": "^4.31.0",
-        "@vue/cli-plugin-babel": "^5.0.0-beta.3",
-        "@vue/cli-plugin-eslint": "^5.0.0-beta.3",
-        "@vue/cli-plugin-router": "^5.0.0-beta.3",
-        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.3",
-        "@vue/cli-plugin-vuex": "^5.0.0-beta.3",
-        "@vue/cli-service": "^5.0.0-beta.3",
-        "@vue/compiler-sfc": "^3.2.10",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "@vue/cli-plugin-babel": "^5.0.0-beta.4",
+        "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
+        "@vue/cli-plugin-router": "^5.0.0-beta.4",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.4",
+        "@vue/cli-plugin-vuex": "^5.0.0-beta.4",
+        "@vue/cli-service": "^5.0.0-beta.4",
+        "@vue/compiler-sfc": "^3.2.19",
         "@vue/test-utils": "^1.2.2",
         "babel-eslint": "^10.1.0",
+        "@vue/eslint-config-typescript": "^7.0.0",
         "eslint": "^7.32.0",
         "eslint-plugin-security": "^1.4.0",
-        "eslint-plugin-vue": "^7.17.0",
-        "jest": "^27.1.1",
-        "jest-puppeteer": "^5.0.4",
-        "nodemon": "^2.0.12",
-        "puppeteer": "^10.2.0",
-        "sass": "^1.39.0",
+        "eslint-plugin-vue": "^7.19.1",
+        "jest": "^27.2.4",
+        "jest-puppeteer": "^6.0.0",
+        "nodemon": "^2.0.13",
+        "puppeteer": "^10.4.0",
+        "sass": "^1.42.1",
         "sass-loader": "^12.1.0",
         "sequelize-cli": "^6.2.0",
         "ts-node": "^10.2.1",
-        "tsc-alias": "^1.3.9",
+        "tsc-alias": "^1.3.10",
         "tsconfig-paths": "^3.11.0",
-        "typescript": "^4.4.2"
+        "typescript": "^4.4.3",
+        "@babel/preset-typescript": "^7.15.0",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "eslint-plugin-prettier": "^4.0.0"
     }
 }
