--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
         "typescript": "^4.4.3",
         "@babel/preset-typescript": "^7.15.0",
         "@vue/eslint-config-prettier": "^6.0.0",
-        "eslint-plugin-prettier": "^4.0.0"
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "prettier": "^2.4.1"
     }
 }
