--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "@vue/eslint-config-prettier": "^6.0.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-config-prettier": "^8.3.0",
-        "prettier": "^2.4.1"
+        "prettier": "^2.4.1",
+        "@vue/cli-plugin-typescript": "^5.0.0-beta.4"
     }
 }
