--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,38 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "commonjs",
-        "rootDir": "./server",
-        "outDir": "./dist/server",
-        "esModuleInterop": true,
-        "strict": true,
-        "skipLibCheck": true
-    }
+      "target": "esnext",
+      "module": "esnext",
+      "strict": true,
+      "jsx": "preserve",
+      "importHelpers": true,
+      "moduleResolution": "node",
+      "experimentalDecorators": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "sourceMap": true,
+      "baseUrl": ".",
+      "types": [
+        "webpack-env"
+      ],
+      "paths": {
+        "@/*": [
+          "app/*"
+        ]
+      },
+      "lib": [
+        "esnext",
+        "dom",
+        "dom.iterable",
+        "scripthost"
+      ]
+    },
+    "include": [
+      "app/**/*.ts",
+      "app/**/*.vue"
+    ],
+    "exclude": [
+      "node_modules",
+      "dist"
+    ]
 }
+  
