--- a/package.json
+++ b/package.json
@@ -60,22 +60,22 @@
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
         "@types/validator": "^13.6.3",
-        "@typescript-eslint/eslint-plugin": "^4.33.0",
-        "@typescript-eslint/parser": "^4.33.0",
-        "@vue/cli-plugin-babel": "^5.0.0-beta.4",
-        "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
-        "@vue/cli-plugin-router": "^5.0.0-beta.4",
-        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.4",
-        "@vue/cli-plugin-vuex": "^5.0.0-beta.4",
-        "@vue/cli-service": "^5.0.0-beta.4",
-        "@vue/compiler-sfc": "^3.2.19",
+        "@typescript-eslint/eslint-plugin": "^5.0.0-alpha.48",
+        "@typescript-eslint/parser": "^5.0.0-alpha.45",
+        "@vue/cli-plugin-babel": "^5.0.0-beta.5",
+        "@vue/cli-plugin-eslint": "^5.0.0-beta.5",
+        "@vue/cli-plugin-router": "^5.0.0-beta.5",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.5",
+        "@vue/cli-plugin-vuex": "^5.0.0-beta.5",
+        "@vue/cli-service": "^5.0.0-beta.5",
+        "@vue/compiler-sfc": "^3.2.20",
         "@vue/test-utils": "^1.2.2",
-        "babel-eslint": "^10.1.0",
+        "@babel/eslint-parser": "7.15.8",
         "@vue/eslint-config-typescript": "^7.0.0",
-        "eslint": "^7.32.0",
+        "eslint": "^8.0.0",
         "eslint-plugin-security": "^1.4.0",
         "eslint-plugin-vue": "^7.19.1",
-        "jest": "^27.2.4",
+        "jest": "^27.2.5",
         "jest-puppeteer": "^6.0.0",
         "nodemon": "^2.0.13",
         "puppeteer": "^10.4.0",
@@ -91,6 +91,6 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-config-prettier": "^8.3.0",
         "prettier": "^2.4.1",
-        "@vue/cli-plugin-typescript": "^5.0.0-beta.4"
+        "@vue/cli-plugin-typescript": "^5.0.0-beta.5"
     }
 }
