--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-config-prettier": "^8.3.0",
         "prettier": "^2.4.1",
-        "@vue/cli-plugin-typescript": "^5.0.0-beta.5"
+        "@vue/cli-plugin-typescript": "^5.0.0-beta.5",
+        "eslint-formatter-codeframe": "7.32.1"
     }
 }
