--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     },
     "dependencies": {
         "@alanmorel/vida": "^0.0.27",
-        "axios": "^0.22.0",
+        "axios": "^0.23.0",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
+        "chalk": "^4.1.2",
         "connect-session-sequelize": "^7.1.2",
         "cookie-parser": "^1.4.5",
-        "core-js": "^3.18.2",
+        "core-js": "^3.18.3",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
@@ -37,7 +38,7 @@
         "joi": "^17.4.2",
         "joi-password-complexity": "^5.1.0",
         "morgan": "^1.10.0",
-        "mysql2": "^2.3.0",
+        "mysql2": "^2.3.2",
         "passport": "^0.5.0",
         "passport-local": "^1.0.0",
         "sequelize": "^6.7.0",
@@ -46,6 +47,8 @@
         "vuex": "^4.0.0-rc.2"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "7.15.8",
+        "@babel/preset-typescript": "^7.15.0",
         "@types/bcrypt": "^5.0.0",
         "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.2",
@@ -55,43 +58,41 @@
         "@types/express-session": "^1.17.4",
         "@types/helmet": "^4.0.0",
         "@types/morgan": "1.9.3",
-        "@types/node": "^16.10.3",
+        "@types/node": "^16.11.2",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
-        "@types/validator": "^13.6.3",
-        "@typescript-eslint/eslint-plugin": "^5.0.0-alpha.48",
-        "@typescript-eslint/parser": "^5.0.0-alpha.48",
-        "@vue/cli-plugin-babel": "^5.0.0-beta.5",
-        "@vue/cli-plugin-eslint": "^5.0.0-beta.5",
-        "@vue/cli-plugin-router": "^5.0.0-beta.5",
-        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.5",
-        "@vue/cli-plugin-vuex": "^5.0.0-beta.5",
-        "@vue/cli-service": "^5.0.0-beta.5",
+        "@types/validator": "^13.6.4",
+        "@typescript-eslint/eslint-plugin": "^5.1.0",
+        "@typescript-eslint/parser": "^5.1.0",
+        "@vue/cli-plugin-babel": "^5.0.0-beta.6",
+        "@vue/cli-plugin-eslint": "^5.0.0-beta.6",
+        "@vue/cli-plugin-router": "^5.0.0-beta.6",
+        "@vue/cli-plugin-typescript": "^5.0.0-beta.6",
+        "@vue/cli-plugin-unit-jest": "^5.0.0-beta.6",
+        "@vue/cli-plugin-vuex": "^5.0.0-beta.6",
+        "@vue/cli-service": "^5.0.0-beta.6",
         "@vue/compiler-sfc": "^3.2.20",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "@vue/eslint-config-typescript": "^8.0.0",
         "@vue/test-utils": "^1.2.2",
-        "@babel/eslint-parser": "7.15.8",
-        "@vue/eslint-config-typescript": "^7.0.0",
-        "eslint": "^8.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-formatter-codeframe": "7.32.1",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-security": "^1.4.0",
-        "eslint-plugin-vue": "^7.19.1",
-        "jest": "^27.2.5",
+        "eslint-plugin-vue": "^7.20.0",
+        "jest": "^27.3.1",
         "jest-puppeteer": "^6.0.0",
-        "nodemon": "^2.0.13",
+        "nodemon": "^2.0.14",
+        "prettier": "^2.4.1",
         "puppeteer": "^10.4.0",
-        "sass": "^1.42.1",
-        "sass-loader": "^12.1.0",
+        "sass": "^1.43.3",
+        "sass-loader": "^12.2.0",
         "sequelize-cli": "^6.2.0",
-        "ts-node": "^10.2.1",
+        "ts-node": "^10.3.1",
         "tsc-alias": "^1.3.10",
         "tsconfig-paths": "^3.11.0",
-        "typescript": "^4.4.3",
-        "@babel/preset-typescript": "^7.15.0",
-        "@vue/eslint-config-prettier": "^6.0.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-config-prettier": "^8.3.0",
-        "prettier": "^2.4.1",
-        "@vue/cli-plugin-typescript": "^5.0.0-beta.5",
-        "eslint-formatter-codeframe": "7.32.1"
+        "typescript": "^4.4.4"
     }
 }
