--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
         "body-parser": "^1.19.0",
         "chalk": "^4.1.2",
         "connect-session-sequelize": "^7.1.2",
-        "cookie-parser": "^1.4.5",
+        "cookie-parser": "^1.4.6",
         "core-js": "^3.19.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
-        "express-handlebars": "^5.3.4",
         "express-session": "^1.17.2",
         "helmet": "^4.6.0",
         "joi": "^17.4.2",
         "joi-password-complexity": "^5.1.0",
-        "mysql2": "^2.3.2",
+        "mysql2": "^2.3.3",
         "passport": "^0.5.0",
         "passport-local": "^1.0.0",
         "sequelize": "^6.9.0",
@@ -53,16 +53,16 @@
         "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
+        "@types/ejs": "^3.1.0",
         "@types/express": "^4.17.13",
-        "@types/express-handlebars": "^5.3.1",
         "@types/express-session": "^1.17.4",
         "@types/node": "^16.11.7",
         "@types/passport": "^1.0.7",
         "@types/passport-local": "^1.0.34",
         "@types/sequelize": "^4.28.10",
-        "@types/validator": "^13.6.6",
-        "@typescript-eslint/eslint-plugin": "^5.3.1",
-        "@typescript-eslint/parser": "^5.3.1",
+        "@types/validator": "^13.7.0",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
         "@vue/cli-plugin-babel": "^5.0.0-rc.0",
         "@vue/cli-plugin-eslint": "^5.0.0-rc.0",
         "@vue/cli-plugin-router": "^5.0.0-rc.0",
@@ -70,8 +70,8 @@
         "@vue/cli-plugin-unit-jest": "^5.0.0-rc.0",
         "@vue/cli-plugin-vuex": "^5.0.0-rc.0",
         "@vue/cli-service": "^5.0.0-rc.0",
-        "@vue/compiler-sfc": "^3.2.21",
-        "@vue/eslint-config-typescript": "^9.0.1",
+        "@vue/compiler-sfc": "^3.2.22",
+        "@vue/eslint-config-typescript": "^9.1.0",
         "@vue/test-utils": "^1.2.2",
         "eslint": "^8.2.0",
         "eslint-config-prettier": "^8.3.0",
@@ -88,7 +88,7 @@
         "sass-loader": "^12.3.0",
         "sequelize-cli": "^6.3.0",
         "ts-node": "^10.4.0",
-        "tsc-alias": "^1.3.10",
+        "tsc-alias": "^1.4.1",
         "tsconfig-paths": "^3.11.0",
         "typescript": "^4.4.4"
     }
